# A-REST-API-application-implemented-using-a-multi-layered-architecture.

./: README.md  docker-compose.yml  main.py  pyproject.toml
src/: schemas.py
src/api/: auth.py  contacts.py  users.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  users.py
